--- a/other/other.tex
+++ b/other/other.tex
@@ -84,7 +84,7 @@ $n$ Personen im Kreis, jeder $k$-te wird erschossen.
 	Lösung: Sortiere Knoten links aufsteigend nach Gewicht, danach nutze normlen Algorithmus (\textsc{Kuhn}, Seite \pageref{kuhn})
 \end{itemize}
 
-\section{Tipps \& Tricks}
+\subsection{Tipps \& Tricks}
 
 \begin{itemize}
 	\item Run Tim Error:
