Adding section about legendre symbol.

--- a/latexHeaders/math.tex
+++ b/latexHeaders/math.tex
@@ -58,6 +58,12 @@
   \end{matrix}
   \biggr\}
 }
+% Legendre symbol.
+\newcommand{\legendre}[2]{
+  \biggl(
+  \frac{#1}{#2}
+  \biggr)
+}
 % Expectation values.
 \newcommand{\E}{\text{E}}
 % Greates common divisor.
