--- a/other/other.tex
+++ b/other/other.tex
@@ -97,6 +97,9 @@ $n$ Personen im Kreis, jeder $k$-te wird erschossen.
 	\[
 		[X/G] = \frac{1}{\vert G \vert} \sum_{g \in G} \vert X^g \vert
 	\]
+
+	\item \textbf{Verteilung von Primzahlen:}
+	Für alle $n \in \mathbb{N}$ gilt: Ex existiert eine Primzahl $p$ mit $n \leq p \leq 2n$.
 \end{itemize}
 
 \subsection{Tipps \& Tricks}
