Adding Kirchhoffs Theorem.

--- a/other/other.tex
+++ b/other/other.tex
@@ -100,6 +100,16 @@ $n$ Personen im Kreis, jeder $k$-te wird erschossen.
 
 	\item \textbf{Verteilung von Primzahlen:}
 	Für alle $n \in \mathbb{N}$ gilt: Ex existiert eine Primzahl $p$ mit $n \leq p \leq 2n$.
+
+	\item \textbf{Satz von \textsc{Kirchhoff}:}
+	Sei $G$ ein zusammenhängender, ungerichteter Graph evtl. mit Mehrfachkanten.
+	Sei $A$ die Adjazenzmatrix von $G$.
+	Dabei ist $a_{ij}$ die Anzahl der Kanten zwischen Knoten $i$ und $j$.
+	Sei $B$ eine Diagonalmatrix, $b_{ii}$ sei der Grad von Knoten $i$.
+	Definiere $R = B - A$.
+	Alle Kofaktoren von $R$ sind gleich und die Anzahl der Spannbäume von $G$.
+	\newline
+	Entferne letzte Zeile und Spalte und berechne Betrag der Determinante.
 \end{itemize}
 
 \subsection{Tipps \& Tricks}
