Improving last page of two column output.

--- a/tcr.tex
+++ b/tcr.tex
@@ -28,7 +28,7 @@
 \newpage
 
 % Content.
-\begin{multicols}{2}
+\begin{multicols*}{2}
   \input{datastructures/datastructures}
   \input{graph/graph}
   \input{geometry/geometry}
@@ -36,5 +36,5 @@
   \input{string/string}
   \input{java/java}
   \input{other/other}
-\end{multicols}
+\end{multicols*}
 \end{document}
