Changing team name and date.

--- a/tcr.tex
+++ b/tcr.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 
 % General information.
-\newcommand{\teamname}{ChaosKITs}
+\newcommand{\teamname}{breaKIT}
 \newcommand{\university}{Karlsruhe Institute of Technology}
 
 % Font encoding.
@@ -17,6 +17,7 @@
 % Title and author information.
 \title{Team Contest Reference}
 \author{\teamname \\ \university}
+\date{20. November 2016}
 \begin{document}
 
 % Titlepage with table of contents.
