--- a/math/math.tex
+++ b/math/math.tex
@@ -148,6 +148,7 @@ Sei $p \geq 3$ eine Primzahl, $a \in \mathbb{Z}$:
 	\legendre{p}{q} \cdot \legendre{q}{p} &=
 	(-1)^{\frac{p - 1}{2} \cdot \frac{q - 1}{2}}
 \end{align*}
+\lstinputlisting{math/legendre.cpp}
 
 \subsection{Kombinatorik}
 
