Adding Suffix Tree code.

--- a/string/string.tex
+++ b/string/string.tex
@@ -9,6 +9,9 @@
 \subsection{Trie}
 \lstinputlisting{string/trie.cpp}
 
+\subsection{Suffix-Baum}
+\lstinputlisting{string/suffixTree.cpp}
+
 \subsection{Suffix-Array}
 \lstinputlisting{string/suffixArray.cpp}
 
