--- a/datastructures/datastructures.tex
+++ b/datastructures/datastructures.tex
@@ -17,3 +17,6 @@ Dazu: Offset in den inneren Knoten des Baums speichern.
 
 \subsection{STL-Tree}
 \lstinputlisting{datastructures/stlTree.cpp}
+
+\subsection{STL-Rope}
+\lstinputlisting{datastructures/stlRope.cpp}
