Adding treap code and changes on LCA code.

--- a/datastructures/datastructures.tex
+++ b/datastructures/datastructures.tex
@@ -18,5 +18,8 @@ Dazu: Offset in den inneren Knoten des Baums speichern.
 \subsection{STL-Tree}
 \lstinputlisting{datastructures/stlTree.cpp}
 
-\subsection{STL-Rope}
+\subsection{STL-Rope (Implicit Cartesian Tree)}
 \lstinputlisting{datastructures/stlRope.cpp}
+
+\subsection{Treap (Cartesian Tree)}
+\lstinputlisting{datastructures/treap.cpp}
