Adding formular for number of dearangements.

--- a/math/math.tex
+++ b/math/math.tex
@@ -531,6 +531,11 @@ Anzahl der Teilmengen von $\mathbb{N}$, die sich zu $n$ aufaddieren mit maximale
 
 	\#Wälder mit $k$ gewurzelten Bäumen	&
 	$\frac{k}{n}\binom{n}{k}n^{n-k}$ \\
+
+	Dearangements &
+	$!n = (n - 1)(!(n - 1) + !(n - 2))$ \\
+	&
+	$\lim\limits_{n \to \infty} \frac{!n}{n!} = \frac{1}{e}$ \\
 	\bottomrule
 \end{tabular}
 
