Adding fast Input/Output and Manacher's algorithm.

--- a/other/other.tex
+++ b/other/other.tex
@@ -6,6 +6,9 @@
 \subsection{Bit Operations}
 \lstinputlisting{other/bitOps.cpp}
 
+\subsection{Fast IO}
+\lstinputlisting{other/fastIO.cpp}
+
 \subsection{Sonstiges}
 \begin{lstlisting}
 // Alles-Header.
