--- a/string/string.tex
+++ b/string/string.tex
@@ -43,3 +43,6 @@
 
 \subsection{Rolling Hash}
 \lstinputlisting{string/rollingHash.cpp}
+
+\subsection{\textsc{Manacher}'s Algorithm, Longest Palindrome}
+\lstinputlisting{string/manacher.cpp}
