Fixing error in recursion for partition number.

--- a/math/math.tex
+++ b/math/math.tex
@@ -190,10 +190,10 @@ Sei $p \geq 3$ eine Primzahl, $a \in \mathbb{Z}$:
 		B_n = \sum\limits_{k = 0}^{n - 1} B_k\binom{n-1}{k}
 		= \sum\limits_{k = 0}^{n}\stirlingII{n}{k}$\\
 
-		\textsc{Int. Partitions} &
+		\textsc{Partitions} &
 		$f(1,1) = 1 \quad
 		f(n,k) = 0 \text{ für } k > n \quad
-		f(n,k) = f(n-k,k) + f(n,k-1)$ \\
+		f(n,k) = f(n-k,k) + f(n-1,k-1)$ \\
 		\bottomrule
 	\end{tabular}
 \end{flushleft}
