--- a/datastructures/datastructures.tex
+++ b/datastructures/datastructures.tex
@@ -23,3 +23,6 @@ Dazu: Offset in den inneren Knoten des Baums speichern.
 
 \subsection{Treap (Cartesian Tree)}
 \lstinputlisting{datastructures/treap.cpp}
+
+\subsection{Erste unbenutzte natürliche Zahl}
+\lstinputlisting{datastructures/firstUnused.cpp}
