--- a/math/math.tex
+++ b/math/math.tex
@@ -37,7 +37,7 @@ Sei $0 \leq x < n$. Definiere $d := \ggT(x, n)$.\newline
 	\]
 	Formel kann auch für nicht teilerfremde Moduli verwendet werden.
 	Sind die Moduli nicht teilerfremd, existiert genau dann eine Lösung,
-	wenn $a_i \equiv a_j \mod \ggT(m_i, m_j)$.
+	wenn $a\equiv~b \mod \ggT(m, n)$.
 	In diesem Fall sind keine Faktoren
 	auf der linken Seite erlaubt.
 \end{itemize}
